# Outfit-Plugin

./: Cargo.toml
outfit-core/: Cargo.toml
outfit-core/data/: anim.txt  color.txt  dress.txt  heads.txt  labels.txt  labels2.txt  other.txt  outfits_label.txt
outfit-core/src/: capture.rs  data.rs  enums.rs  lib.rs  localize.rs  output.rs  photo.rs  playerdata.rs  unitasset.rs  utils.rs
outfit-core/src/assets/: accessory.rs  conditions.rs  mod.rs
outfit-core/src/data/: acc.rs  anim.rs  body.rs  color.rs  dress.rs  hashes.rs  item.rs  list.rs  unit_acc.rs  util.rs
outfit-core/src/localize/command/: en.txt  tw.txt
outfit-core/src/localize/help/: en.txt  tw.txt
outfit-core/src/menu/: assetmenu.rs  control.rs  equipment_box.rs  icons.rs  items.rs  keyhelp.rs  menuitem.rs  mod.rs
outfit-core/src/menu/items/: asset.rs  data.rs  flags.rs  item.rs  menus.rs  profile.rs
outfit-core/src/shop/: change_root.rs  mod.rs  room.rs  unitselect.rs
outfit-core/src/unitasset/: load.rs
src/: assets.rs  enums.rs  lib.rs
src/assets/: dress.rs  transform.rs
