[package]
name = "outfits"
version = "0.1.0"
authors = ["triabolical"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
outfit_core = { path = "outfit-core" }
skyline = { git = "https://github.com/ultimate-research/skyline-rs", version="0.6.0" }
unity = { version = "0.3.0", git = "https://github.com/triabolicals/unity", branch = "macro" }
engage = { git = "https://github.com/triabolicals/engage", branch = "macro" }
cobapi = { git = "https://github.com/triabolicals/cobapi", branch = "test" }
bitflags = "2.10.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 2