[package]
name = "outfit_core"
version = "0.1.0"
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000"

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs", version="0.6.0" }
unity = { version = "0.3.0", git = "https://github.com/triabolicals/unity", branch = "macro" }
engage = { git = "https://github.com/triabolicals/engage", branch = "macro" }
bitflags = "2.11.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 2